[WiP] Refactor of Carousels, and Image Teaser components

--- a/view/frontend/templates/component/hero_carousel.phtml
+++ b/view/frontend/templates/component/hero_carousel.phtml
@@ -6,11 +6,12 @@ $componentConfiguration = $block->getData();
 $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
 
-$componentClasses = '';
+$componentClasses = 'cs-image-teaser--hero-teaser';
 if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
     $componentClasses .= ' cs-image-teaser--as-list-mobile';
 }
 $componentClasses .= ' ' . $block->getVar('hero_carousel/additional_css_classes');
+$containerClasses = 'cs-container--hero-teaser';
 
 // Map data from deprecated Image Teaser for backward compatibility
 if (!isset($componentConfiguration['scenario'])) {
@@ -81,12 +82,21 @@ if (empty($jsSettings)) {
     $jsSettings = [];
 }
 
+if ($block->getVar('hero_carousel/use_whole_screen') == 'true') {
+    if ($block->getVar('hero_carousel/teaser_width') != 'container') {
+        $containerClasses .= ' cs-container--use-whole-screen';
+        $jsSettings['useWholeScreen'] = true;
+    }
+    $componentClasses .= ' cs-image-teaser--use-whole-screen';
+}
+
 if (isset($componentConfiguration)) {
     echo $this->getLayout()
         ->createBlock(MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser::class)
         ->setData($componentConfiguration)
-        ->setMix('cs-image-teaser--hero-teaser' . $componentClasses)
-        ->setContainerMix('cs-container--hero-teaser')
+        ->setComponentType('hero_carousel')
+        ->setMix($componentClasses)
+        ->setContainerMix($containerClasses)
         ->setAdditionalJsSettings($jsSettings)
         ->toHtml();
 }
