--- a/view/frontend/templates/component/icon.phtml
+++ b/view/frontend/templates/component/icon.phtml
@@ -1,21 +1,8 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Icon */
 $iconConfiguration = $block->getData();
-$jsSettings = $block->getVar('icon/js') ?: [
-    'carouselBreakpoint' => 1023,
-    'breakpoints' => [
-        639 => [
-            'slidesPerView' => 2,
-            'slidesPerGroup' => 2
-        ],
-        1023 => [
-            'slidesPerView' => 3,
-            'slidesPerGroup' => 3
-        ]
-    ]
-];
 // Build JS config
-$jsSettings = $block->getVar('hero_carousel/js');
+$jsSettings = $block->getVar('icon/js');
 if (empty($jsSettings)) {
     $jsSettings = [];
 }
@@ -23,6 +10,7 @@ if (empty($jsSettings)) {
 echo $this->getLayout()
     ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
     ->setData($iconConfiguration)
+    ->setComponentType('icon')
     ->setMix('cs-image-teaser--icon ' . $block->getMix())
     ->setContainerMix('cs-container--icon ' . $block->getContainerMix())
     ->setAdditionalJsSettings($jsSettings)
