--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -7,6 +7,8 @@ $maxContentWidth = $block->getVar('max_content_width');
 $imageTeaser = $block->getData();
 $slides = $viewModel->getSlides();
 
+$componentType = $block->getComponentType() ?? 'image_teaser';
+
 $desktopLayout = $imageTeaser['scenario']['desktopLayout']['id'];
 $mobileLayout = $imageTeaser['scenario']['mobileLayout']['id'];
 
@@ -41,9 +43,6 @@ $componentClasses .= ' ' . $block->getVar('image_teaser/additional_css_classes')
 if ($teaserWidth == 'container' or $teaserWidth == 'container-slider') {
     $componentClasses .= ' cs-image-teaser--container-width';
 }
-if ($block->getVar('image_teaser/use_whole_screen') == 'true' && $teaserWidth == 'container-slider') {
-    $componentClasses .= ' cs-image-teaser--use-whole-screen';
-}
 
 $contentPlacement = $imageTeaser['scenario']['contentPlacement']['id'];
 
@@ -61,25 +60,37 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
 
 $containerClasses = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-container--image-teaser-window-width' : '';
 
-$containerClasses = $containerClasses . ' ' . $block->getContainerMix();
+$containerClasses .= ' ' . $block->getContainerMix();
 if (isset($imageTeaser['cc_css_classes'])):
     $containerClasses .= ' ' . $imageTeaser['cc_css_classes'];
 endif;
 
-$windowWidthClass = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-image-teaser--window-width' : '';
-
-// Build JS config
+// Init JS config
 $jsSettings = $block->getVar('image_teaser/js');
 if (empty($jsSettings)) {
     $jsSettings = [];
 }
-$additionalJsSettings = $block->getAdditionalJsSettings();
-if ($additionalJsSettings) {
-    $jsSettings = array_merge($jsSettings, $additionalJsSettings);
+
+// Modify css classes based on settings
+if ($block->getVar($componentType.'/use_whole_screen') == 'true') {
+    if ($teaserWidth != 'container') {
+        $containerClasses .= ' cs-container--use-whole-screen';
+        $jsSettings['useWholeScreen'] = true;
+    }
+    $componentClasses .= ' cs-image-teaser--use-whole-screen';
 }
-$jsSettings['usePagination'] = filter_var($block->getVar('image_teaser/pagination/use'), FILTER_VALIDATE_BOOL);
+
+// Build JS config
 $jsSettings['itemsPerView'] = (int)$itemsPerRow;
 $jsSettings['itemsCount'] = count($slides);
+
+// Merge JS config from other components if provided
+$additionalJsSettings = $block->getAdditionalJsSettings();
+if (!empty($additionalJsSettings)) {
+    $jsSettings = array_merge($jsSettings, $additionalJsSettings);
+}
+
+$windowWidthClass = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-image-teaser--window-width' : '';
 
 // Grid teaser
 $gridTeaser = $block->getGridTeaser();
@@ -117,116 +128,111 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
     ?>
 
     <div class="cs-container cs-container--image-teaser<?= $isSlider ? ' cs-container--image-teaser-slider' : '' ?><?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
-        <?= $this->getLayout()
-            ->createBlock(\Magento\Framework\View\Element\Template::class)
-            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_component.phtml')
-            ->setImageTeaser($imageTeaser)
-            ->setIsSlider($isSlider)
-            ->setIsSliderMobile($isSliderMobile)
-            ->setContentPlacement($contentPlacement)
-            ->toHtml();
-        ?>
+        <div class="cs-container__inner">
+            <?= $this->getLayout()
+                ->createBlock(\Magento\Framework\View\Element\Template::class)
+                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_component.phtml')
+                ->setImageTeaser($imageTeaser)
+                ->setIsSlider($isSlider)
+                ->setIsSliderMobile($isSliderMobile)
+                ->setContentPlacement($contentPlacement)
+                ->toHtml();
+            ?>
 
-        <div class="cs-image-teaser <?= $windowWidthClass ?>
-            cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
-            cs-image-teaser--items-in-row-mobile-<?= $itemsPerRowMobile ?>
-            <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
-            <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
-            <?= $componentClasses ?>"
-            <?php if($isSlider): ?>
-            data-mage-init='{ "ccImageTeaser": <?= json_encode($jsSettings) ?> }'
-            <?php endif; ?>
-        >
-            <div class="cs-image-teaser__slides-wrapper">
-                <?= $this->getLayout()
-                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_slides.phtml')
-                    ->setImageTeaser($imageTeaser)
-                    ->setIsSlider($isSlider)
-                    ->setIsSliderMobile($isSliderMobile)
-                    ->setContentPlacement($contentPlacement)
-                    ->toHtml();
-                ?>
-
-                <ul class="cs-image-teaser__slides cs-image-teaser__slides--content-placement-<?= $contentPlacement ?><?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?> ">
-                    <?php $slideIndex = 0; ?>
-                    <?php foreach ($slides as $slide): ?>
-                        <?= $this->getLayout()
-                            ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
-                            ->setSlide($slide)
-                            ->setImageTeaser($imageTeaser)
-                            ->setIsSlider($isSlider)
-                            ->setIsSliderMobile($isSliderMobile)
-                            ->setContentPlacement($contentPlacement)
-                            ->setOpenLinkInNewTab($openLinkInNewTab)
-                            ->setSlideIndex($slideIndex)
-                            ->toHtml();
-                        ?>
-                        <?php $slideIndex++; ?>
-                    <?php endforeach; ?>
-                </ul>
-
-                <?= $this->getLayout()
-                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_slides.phtml')
-                    ->setImageTeaser($imageTeaser)
-                    ->setIsSlider($isSlider)
-                    ->setIsSliderMobile($isSliderMobile)
-                    ->setContentPlacement($contentPlacement)
-                    ->toHtml();
-                ?>
-
-                <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/navigation/show')): ?>
+            <div class="cs-image-teaser <?= $windowWidthClass ?>
+                cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
+                cs-image-teaser--items-in-row-mobile-<?= $itemsPerRowMobile ?>
+                <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
+                <?= $isSliderMobile ? 'cs-image-teaser--slider-mobile' : '' ?>
+                <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
+                <?= $componentClasses ?>"
+                <?php if($isSlider || ($isSliderMobile && $block->getVar($componentType.'/js/usePagination'))): ?>
+                data-mage-init='{ "ccImageTeaser": <?= json_encode($jsSettings) ?> }'
+                <?php endif; ?>
+            >
+                <div class="cs-image-teaser__slides-wrapper">
                     <?= $this->getLayout()
                         ->createBlock(\Magento\Framework\View\Element\Template::class)
-                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-prev.phtml')
-                        ->setIcon($block->getVar('image_teaser/navigation/arrows/prev/path'))
-                        ->setImageTeaserData($imageTeaser)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_slides.phtml')
+                        ->setImageTeaser($imageTeaser)
+                        ->setIsSlider($isSlider)
+                        ->setIsSliderMobile($isSliderMobile)
+                        ->setContentPlacement($contentPlacement)
                         ->toHtml();
                     ?>
+
+                    <?php if (($isSlider or $isSliderMobile) && $block->getVar($componentType.'/navigation/show')): ?>
+                        <?= $this->getLayout()
+                            ->createBlock(\Magento\Framework\View\Element\Template::class)
+                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-prev.phtml')
+                            ->setIcon($block->getVar('image_teaser/navigation/arrows/prev/path'))
+                            ->setImageTeaserData($imageTeaser)
+                            ->toHtml();
+                        ?>
+                    <?php endif; ?>
+
+                    <ul class="cs-image-teaser__slides cs-image-teaser__slides<?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?> ">
+                        <?php $slideIndex = 0; ?>
+                        <?php foreach ($slides as $slide): ?>
+                            <?= $this->getLayout()
+                                ->createBlock(\Magento\Framework\View\Element\Template::class)
+                                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
+                                ->setSlide($slide)
+                                ->setImageTeaser($imageTeaser)
+                                ->setIsSlider($isSlider)
+                                ->setIsSliderMobile($isSliderMobile)
+                                ->setContentPlacement($contentPlacement)
+                                ->setOpenLinkInNewTab($openLinkInNewTab)
+                                ->setSlideIndex($slideIndex)
+                                ->toHtml();
+                            ?>
+                            <?php $slideIndex++; ?>
+                        <?php endforeach; ?>
+                    </ul>
+
                     <?= $this->getLayout()
                         ->createBlock(\Magento\Framework\View\Element\Template::class)
-                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-next.phtml')
-                        ->setIcon($block->getVar('image_teaser/navigation/arrows/next/path'))
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_slides.phtml')
+                        ->setImageTeaser($imageTeaser)
+                        ->setIsSlider($isSlider)
+                        ->setIsSliderMobile($isSliderMobile)
+                        ->setContentPlacement($contentPlacement)
+                        ->toHtml();
+                    ?>
+
+                    <?php if (($isSlider or $isSliderMobile) && $block->getVar($componentType.'/navigation/show')): ?>
+                        <?= $this->getLayout()
+                            ->createBlock(\Magento\Framework\View\Element\Template::class)
+                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-next.phtml')
+                            ->setIcon($block->getVar('image_teaser/navigation/arrows/next/path'))
+                            ->setImageTeaserData($imageTeaser)
+                            ->toHtml();
+                        ?>
+                    <?php endif; ?>
+                </div>
+
+                <?php if (($isSlider or $isSliderMobile) && $block->getVar($componentType.'/js/usePagination')): ?>
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/pagination.phtml')
                         ->setImageTeaserData($imageTeaser)
+                        ->setIsSlider($isSlider)
+                        ->setIsSliderMobile($isSliderMobile)
+                        ->toHtml();
+                    ?>
+
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_pagination.phtml')
+                        ->setImageTeaser($imageTeaser)
+                        ->setIsSlider($isSlider)
+                        ->setIsSliderMobile($isSliderMobile)
+                        ->setContentPlacement($contentPlacement)
                         ->toHtml();
                     ?>
                 <?php endif; ?>
-
-                <?= $this->getLayout()
-                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_nav.phtml')
-                    ->setImageTeaser($imageTeaser)
-                    ->setIsSlider($isSlider)
-                    ->setIsSliderMobile($isSliderMobile)
-                    ->setContentPlacement($contentPlacement)
-                    ->toHtml();
-                ?>
             </div>
-
-            <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/pagination/use')): ?>
-                <?= $this->getLayout()
-                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/pagination.phtml')
-                    ->setImageTeaserData($imageTeaser)
-                    ->setIsSlider($isSlider)
-                    ->setIsSliderMobile($isSliderMobile)
-                    ->toHtml();
-                ?>
-
-                <?= $this->getLayout()
-                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_pagination.phtml')
-                    ->setImageTeaser($imageTeaser)
-                    ->setIsSlider($isSlider)
-                    ->setIsSliderMobile($isSliderMobile)
-                    ->setContentPlacement($contentPlacement)
-                    ->toHtml();
-                ?>
-            <?php endif; ?>
         </div>
-
         <?= $this->getLayout()
             ->createBlock(\Magento\Framework\View\Element\Template::class)
             ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_component.phtml')
@@ -237,16 +243,6 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
             ->toHtml();
         ?>
     </div>
-
-    <?= $this->getLayout()
-        ->createBlock(\Magento\Framework\View\Element\Template::class)
-        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_container.phtml')
-        ->setImageTeaser($imageTeaser)
-        ->setIsSlider($isSlider)
-        ->setIsSliderMobile($isSliderMobile)
-        ->setContentPlacement($contentPlacement)
-        ->toHtml();
-    ?>
 <?php if ($gridTeaser): ?>
 </li>
 <?php endif; ?>
