--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -17,11 +17,6 @@ if (isset($componentConfiguration['cc_css_classes'])):
     $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
 endif;
 
-if ($useWholeScreen) {
-    $containerClasses .= ' cs-container--no-padding';
-    $componentClasses .= ' cs-products-carousel--use-whole-screen';
-}
-
 $viewMode = $block->getData('view_mode') ?? 'grid';
 $products = $viewModel->getProducts();
 $isList = $viewMode == 'list' ? true : false;
@@ -32,8 +27,15 @@ $jsSettings = $block->getVar('product_carousel/js');
 if (empty($jsSettings)) {
     $jsSettings = [];
 }
-$jsSettings['usePagination'] = filter_var($block->getVar('product_carousel/pagination/use'), FILTER_VALIDATE_BOOL);
+$jsSettings['usePagination'] = filter_var($block->getVar('product_carousel/js/usePagination'), FILTER_VALIDATE_BOOL);
 $jsSettings['itemsCount'] = count($products);
+
+// modify css classes
+if ($useWholeScreen) {
+    $containerClasses .= ' cs-container--no-padding';
+    $componentClasses .= ' cs-products-carousel--use-whole-screen';
+    $jsSettings['useWholeScreen'] = true;
+}
 ?>
 
 <?= $block->getCssOnce('css/products-carousel.css'); ?>
@@ -42,8 +44,20 @@ $jsSettings['itemsCount'] = count($products);
     <?php if(!$useWholeScreen): ?>
         <div class="cs-container__inner">
     <?php endif; ?>
-        <div class="cs-products-carousel<?= $componentClasses ?>" data-mobile-is-slider="<?= $isSliderMobile; ?>" data-view-mode=<?= $viewMode; ?> data-mage-init='{ "ccProductsCarousel": <?= json_encode($jsSettings) ?> }'>
+        <div class="cs-products-carousel<?= $componentClasses ?>" data-view-mode=<?= $viewMode; ?> data-mage-init='{ "ccProductsCarousel": <?= json_encode($jsSettings) ?> }'>
             <div class="cs-products-carousel__slides-wrapper">
+                <?php if ($block->getVar('product_carousel/navigation/show')): ?>
+                    <button class="cs-products-carousel__nav cs-products-carousel__nav--prev cs-slider-navigation cs-slider-navigation--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" disabled type="button">
+                        <?= $this->getLayout()
+                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                            ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
+                            ->setCssClass('cs-slider-navigation__icon')
+                            ->setAltText(__('Previous slide(s)'))
+                            ->setInlined(true)
+                            ->toHtml();
+                        ?>
+                    </button>
+                <?php endif; ?>
                 <ul class="<?php if ($isList): ?>cs-products-list <?php endif; ?><?php if ($isSliderMobile == 'true'): ?>cs-products-list--carousel <?php endif; ?>cs-products-carousel__slides">
                     <?php foreach ($products as $product): ?>
                         <li class="<?php if ($isList): ?>cs-products-list__item <?php endif; ?>cs-products-carousel__slide">
@@ -55,21 +69,11 @@ $jsSettings['itemsCount'] = count($products);
                 </ul>
 
                 <?php if ($block->getVar('product_carousel/navigation/show')): ?>
-                    <button class="cs-products-carousel__nav cs-products-carousel__nav--prev cs-slider-navigation__trigger cs-slider-navigation__trigger--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
-                        <?= $this->getLayout()
-                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                            ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
-                            ->setCssClass('cs-slider-navigation__trigger-icon')
-                            ->setAltText(__('Previous slide(s)'))
-                            ->setInlined(true)
-                            ->toHtml();
-                        ?>
-                    </button>
-                    <button class="cs-products-carousel__nav cs-products-carousel__nav--next cs-slider-navigation__trigger cs-slider-navigation__trigger--next <?= $block->getVar('product_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
+                    <button class="cs-products-carousel__nav cs-products-carousel__nav--next cs-slider-navigation cs-slider-navigation--next <?= $block->getVar('product_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
                         <?= $this->getLayout()
                             ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
                             ->setIconUrl($block->getVar('product_carousel/navigation/arrows/next/path'))
-                            ->setCssClass('cs-slider-navigation__trigger-icon')
+                            ->setCssClass('cs-slider-navigation__icon')
                             ->setAltText(__('Next slide(s)'))
                             ->setInlined(true)
                             ->toHtml();
@@ -78,8 +82,8 @@ $jsSettings['itemsCount'] = count($products);
                 <?php endif; ?>
             </div>
 
-            <?php if ($block->getVar('product_carousel/pagination/use')): ?>
-                <div class="cs-slider-pagination cs-image-teaser__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></div>
+            <?php if ($block->getVar('product_carousel/js/usePagination')): ?>
+                <div class="cs-slider-pagination cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></div>
             <?php endif; ?>
         </div>
     <?php if(!$useWholeScreen): ?>
