Bugfixes and architecture adjustments

--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -21,6 +21,7 @@ if (empty($jsSettings)) {
 }
 $jsSettings['itemsCount'] = count($brands);
 $jsSettings['columnsConfig'] = $block->getVar('brand_carousel/slides_per_view', 'MageSuite_ContentConstructorFrontend');
+$jsSettings['componentType'] = 'brand_carousel';
 
 // modify css classes
 if ($useWholeScreen) {
