--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -30,6 +30,7 @@ if (empty($jsSettings)) {
 $jsSettings['usePagination'] = filter_var($block->getVar('product_carousel/js/usePagination'), FILTER_VALIDATE_BOOL);
 $jsSettings['itemsCount'] = count($products);
 $jsSettings['columnsConfig'] = $block->getVar('columns/one-column', 'MageSuite_ContentConstructor');
+$jsSettings['componentType'] = 'products_carousel';
 
 // modify css classes
 if ($useWholeScreen) {
