--- a/view/frontend/templates/component/image_teaser/slide_elements/video.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/video.phtml
@@ -3,5 +3,6 @@ $imageTeaserData = $block->getImageTeaserData();
 $slide = $block->getSlide();
 $videoTeaserData = $block->getVideoTeaserData();
 $aspectRatio = $block->getAspectRatio();
+$paddingTop = $aspectRatio ? implode('/', array_reverse(explode('/', $aspectRatio))) : '9/16';
 ?>
-<div data-video-teaser="<?= $block->escapeHtml(json_encode($videoTeaserData)); ?>" <?php if($aspectRatio): ?>style="aspect-ratio: <?= $aspectRatio ?>"<?php endif ?>></div>
+<div data-video-teaser="<?= $block->escapeHtml(json_encode($videoTeaserData)); ?>" <?php if($aspectRatio): ?>style="aspect-ratio: <?= $aspectRatio; ?>; padding-top: calc(<?= $paddingTop; ?> * 100%);"<?php endif ?>></div>
